--- a/index.html
+++ b/index.html
@@ -2,147 +2,160 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jack Simm – Product Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
   <style>
     :root {
-      --bg: #ffffff;
-      --text: #1d1d1f;
-      --gray: #6e6e73;
+      --background: #ffffff;
+      --text: #1c1c1e;
       --accent: #f5f5f7;
-      --shadow: rgba(0, 0, 0, 0.06);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: var(--bg);
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      background-color: var(--background);
       color: var(--text);
-      -webkit-font-smoothing: antialiased;
-      line-height: 1.6;
+      overflow-x: hidden;
     }
 
-    /* Header */
     header {
-      position: sticky;
-      top: 0;
-      background: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 64px;
-      z-index: 1000;
-      box-shadow: 0 1px 8px rgba(0, 0, 0, 0.04);
+      padding: 24px 64px;
+      background-color: white;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+      font-weight: 600;
     }
 
-    .brand {
-      font-weight: 600;
+    .left {
       font-size: 1.2rem;
       cursor: pointer;
     }
 
     .dropdown {
       position: absolute;
-      top: 64px;
+      top: 80px;
       left: 64px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
       display: none;
       flex-direction: column;
-      background: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      transition: all 0.3s ease;
+      z-index: 99;
     }
 
     .dropdown a {
+      padding: 14px 24px;
       text-decoration: none;
-      padding: 16px 24px;
-      font-weight: 500;
       color: var(--text);
+      font-weight: 500;
       transition: background 0.2s;
     }
 
     .dropdown a:hover {
-      background: #f2f2f5;
+      background: #f2f2f2;
     }
 
-    /* Banner */
-    .hero {
+    .banner {
       position: relative;
       height: 100vh;
-      background: #000;
+      width: 100%;
       overflow: hidden;
     }
 
-    .hero img {
+    .banner img {
+      position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 0.9;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+    }
+
+    .banner img.active {
+      opacity: 1;
+      z-index: 1;
     }
 
     .overlay {
       position: absolute;
-      bottom: 48px;
+      bottom: 64px;
       left: 64px;
       display: flex;
+      justify-content: flex-start;
       align-items: center;
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.6);
       backdrop-filter: blur(20px);
-      padding: 24px 32px;
-      border-radius: 18px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      max-width: 480px;
-      gap: 24px;
+      padding: 32px 40px;
+      border-radius: 24px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      max-width: 560px;
+      transition: transform 0.3s ease;
+      z-index: 2;
     }
 
-    .overlay img {
+    .profile-card {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+    }
+
+    .profile-card img {
       width: 96px;
       height: 96px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 0 0 3px white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.08);
     }
 
-    .overlay-text h1 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      margin: 0;
-      color: #000;
+    .profile-card .text h1 {
+      font-size: 1.75rem;
+      font-weight: 600;
+      margin-bottom: 6px;
     }
 
-    .overlay-text p {
-      margin: 4px 0 0;
-      font-size: 1rem;
-      color: var(--gray);
+    .profile-card .text p {
+      font-size: 1.05rem;
+      color: #333;
+      font-weight: 400;
     }
 
-    /* About */
     .about {
-      max-width: 960px;
-      margin: 120px auto 160px;
+      max-width: 1100px;
+      margin: 100px auto;
       padding: 0 40px;
       text-align: center;
     }
 
     .about h2 {
-      font-size: 2.5rem;
-      font-weight: 700;
+      font-size: 2rem;
+      font-weight: 600;
       margin-bottom: 24px;
     }
 
     .about p {
-      font-size: 1.125rem;
-      color: #444;
       max-width: 700px;
       margin: 0 auto;
+      font-size: 1.1rem;
+      line-height: 1.8;
+      color: #444;
     }
 
-    /* Footer */
     footer {
       text-align: center;
-      padding: 64px 24px;
+      padding: 60px 20px;
       font-size: 0.9rem;
       color: #aaa;
     }
@@ -152,35 +165,23 @@
         padding: 20px;
       }
 
-      .dropdown {
-        left: 20px;
-      }
-
       .overlay {
         left: 20px;
         right: 20px;
-        bottom: 20px;
+        bottom: 40px;
         flex-direction: column;
-        align-items: flex-start;
-        padding: 20px;
-        max-width: 90%;
+        gap: 20px;
+        padding: 24px;
       }
 
-      .overlay img {
-        width: 72px;
-        height: 72px;
+      .profile-card {
+        flex-direction: column;
+        text-align: center;
       }
 
-      .overlay-text h1 {
-        font-size: 1.25rem;
-      }
-
-      .about h2 {
-        font-size: 2rem;
-      }
-
-      .about p {
-        font-size: 1rem;
+      .profile-card img {
+        width: 80px;
+        height: 80px;
       }
     }
   </style>
@@ -188,49 +189,63 @@
 <body>
 
   <header>
-    <div class="brand" onclick="toggleDropdown()">≡ Jack Simm</div>
-    <nav class="dropdown" id="dropdown">
-      <a href="projects.html">Projects</a>
+    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
-    </nav>
+    </div>
   </header>
 
-  <section class="hero">
-    <img src="Exploded Organiser.32.jpg" alt="Banner Image" />
+  <section class="banner">
+    <img src="Exploded Organiser.32.jpg" alt="Slide 1" class="active">
+    <img src="untitled.31.jpg" alt="Slide 2">
+    <img src="untitled.34.jpg" alt="Slide 3">
+    <img src="untitled.36.jpg" alt="Slide 4">
+
     <div class="overlay">
-      <img src="profile.jpg" alt="Jack Simm Headshot" />
-      <div class="overlay-text">
-        <h1>Jack Simm</h1>
-        <p>Product Designer & Development Manager</p>
+      <div class="profile-card">
+        <img src="profile.jpg" alt="Jack Simm Headshot" />
+        <div class="text">
+          <h1>Jack Simm</h1>
+          <p>Product Designer & Development Manager</p>
+        </div>
       </div>
     </div>
   </section>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>
-      I’m a BA Product Design student and former Product Development Manager with a manufacturing engineering background. I focus on user-centered design, turning complex problems into elegant, simple solutions.
-    </p>
+    <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical, well-executed design solutions.</p>
   </section>
 
   <footer>
-    &copy; 2025 Jack Simm – All rights reserved.
+    &copy; 2025 Jack Simm – Portfolio
   </footer>
 
   <script>
-    const dropdown = document.getElementById('dropdown');
-    const toggle = document.querySelector('.brand');
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
 
-    function toggleDropdown() {
-      dropdown.style.display = dropdown.style.display === 'flex' ? 'none' : 'flex';
-    }
+    toggle.addEventListener("click", () => {
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    });
 
-    document.addEventListener('click', (e) => {
-      if (!dropdown.contains(e.target) && e.target !== toggle) {
-        dropdown.style.display = 'none';
+    document.addEventListener("click", (e) => {
+      if (!menu.contains(e.target) && e.target !== toggle) {
+        menu.style.display = "none";
       }
     });
+
+    // Slideshow
+    const slides = document.querySelectorAll('.banner img');
+    let index = 0;
+    setInterval(() => {
+      slides[index].classList.remove('active');
+      index = (index + 1) % slides.length;
+      slides[index].classList.add('active');
+    }, 10000);
   </script>
+
 </body>
 </html>
