--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/feather-icons"></script>
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --background: #ffffff;
-      --text: #1c1c1e;
-      --accent: #f5f5f7;
+      --text: #1d1d1f;
+      --light-text: #6e6e73;
+      --white: #fff;
+      --overlay-bg: rgba(255, 255, 255, 0.7);
+      --shadow: rgba(0, 0, 0, 0.1);
     }
 
     * {
@@ -20,44 +21,44 @@
     }
 
     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      background-color: var(--background);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'SF Pro Display', sans-serif;
+      background-color: var(--white);
       color: var(--text);
-      overflow-x: hidden;
+      line-height: 1.6;
     }
 
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 24px 64px;
-      background-color: white;
+      padding: 20px 60px;
+      background-color: var(--white);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
       position: sticky;
       top: 0;
       z-index: 100;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-      font-weight: 600;
     }
 
-    .left {
+    .logo {
       font-size: 1.2rem;
+      font-weight: 600;
       cursor: pointer;
     }
 
     .dropdown {
       position: absolute;
-      top: 80px;
-      left: 64px;
-      background: #fff;
+      top: 70px;
+      left: 60px;
+      background-color: white;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
       display: none;
       flex-direction: column;
       z-index: 99;
     }
 
     .dropdown a {
-      padding: 14px 24px;
+      padding: 16px 24px;
       text-decoration: none;
       color: var(--text);
       font-weight: 500;
@@ -68,89 +69,88 @@
       background: #f2f2f2;
     }
 
-    .banner {
+    .hero {
       position: relative;
       height: 100vh;
       width: 100%;
       overflow: hidden;
     }
 
-    .banner img {
+    .hero img {
       position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
       opacity: 0;
-      transition: opacity 1s ease-in-out;
+      transition: opacity 1.2s ease-in-out;
     }
 
-    .banner img.active {
+    .hero img.active {
       opacity: 1;
       z-index: 1;
     }
 
     .overlay {
       position: absolute;
-      bottom: 64px;
-      left: 64px;
+      bottom: 80px;
+      left: 60px;
       display: flex;
-      justify-content: flex-start;
       align-items: center;
-      background: rgba(255, 255, 255, 0.6);
-      backdrop-filter: blur(20px);
-      padding: 32px 40px;
-      border-radius: 24px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-      max-width: 560px;
-      transition: transform 0.3s ease;
+      background: var(--overlay-bg);
+      backdrop-filter: blur(30px);
+      padding: 30px 40px;
+      border-radius: 28px;
+      box-shadow: 0 20px 60px var(--shadow);
       z-index: 2;
+      max-width: 600px;
+      transition: transform 0.3s ease;
     }
 
     .profile-card {
       display: flex;
       align-items: center;
-      gap: 32px;
+      gap: 24px;
     }
 
     .profile-card img {
-      width: 96px;
-      height: 96px;
+      width: 90px;
+      height: 90px;
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 0 10px rgba(0,0,0,0.08);
     }
 
     .profile-card .text h1 {
-      font-size: 1.75rem;
+      font-size: 1.9rem;
       font-weight: 600;
-      margin-bottom: 6px;
+      margin-bottom: 4px;
+      letter-spacing: -0.2px;
     }
 
     .profile-card .text p {
-      font-size: 1.05rem;
-      color: #333;
-      font-weight: 400;
+      font-size: 1.1rem;
+      color: var(--light-text);
     }
 
     .about {
-      max-width: 1100px;
-      margin: 100px auto;
-      padding: 0 40px;
+      padding: 100px 20px;
+      max-width: 900px;
+      margin: 0 auto;
       text-align: center;
     }
 
     .about h2 {
-      font-size: 2rem;
+      font-size: 2.4rem;
       font-weight: 600;
-      margin-bottom: 24px;
+      margin-bottom: 20px;
     }
 
     .about p {
+      font-size: 1.2rem;
+      color: #444;
+      line-height: 1.8;
       max-width: 700px;
       margin: 0 auto;
-      font-size: 1.1rem;
-      line-height: 1.8;
-      color: #444;
     }
 
     footer {
@@ -162,7 +162,7 @@
 
     @media (max-width: 768px) {
       header {
-        padding: 20px;
+        padding: 20px 24px;
       }
 
       .overlay {
@@ -170,18 +170,24 @@
         right: 20px;
         bottom: 40px;
         flex-direction: column;
-        gap: 20px;
+        align-items: center;
+        text-align: center;
         padding: 24px;
       }
 
       .profile-card {
         flex-direction: column;
-        text-align: center;
+        gap: 16px;
       }
 
       .profile-card img {
         width: 80px;
         height: 80px;
+      }
+
+      .dropdown {
+        left: 20px;
+        width: calc(100% - 40px);
       }
     }
   </style>
@@ -189,7 +195,7 @@
 <body>
 
   <header>
-    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="logo" onclick="toggleDropdown()">≡ Jack Simm</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
@@ -197,15 +203,15 @@
     </div>
   </header>
 
-  <section class="banner">
-    <img src="Exploded Organiser.32.jpg" alt="Slide 1" class="active">
-    <img src="untitled.31.jpg" alt="Slide 2">
-    <img src="untitled.34.jpg" alt="Slide 3">
-    <img src="untitled.36.jpg" alt="Slide 4">
+  <section class="hero">
+    <img src="Exploded Organiser.32.jpg" class="active" alt="Slide 1" />
+    <img src="untitled.31.jpg" alt="Slide 2" />
+    <img src="untitled.34.jpg" alt="Slide 3" />
+    <img src="untitled.36.jpg" alt="Slide 4" />
 
     <div class="overlay">
       <div class="profile-card">
-        <img src="profile.jpg" alt="Jack Simm Headshot" />
+        <img src="profile.jpg" alt="Jack Simm" />
         <div class="text">
           <h1>Jack Simm</h1>
           <p>Product Designer & Development Manager</p>
@@ -216,7 +222,11 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical, well-executed design solutions.</p>
+    <p>
+      I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong>
+      with a manufacturing background. I craft design solutions that are <strong>practical</strong>, 
+      <strong>user-focused</strong>, and engineered for real-world execution.
+    </p>
   </section>
 
   <footer>
@@ -224,7 +234,7 @@
   </footer>
 
   <script>
-    const toggle = document.querySelector(".left");
+    const toggle = document.querySelector(".logo");
     const menu = document.getElementById("dropdownMenu");
 
     toggle.addEventListener("click", () => {
@@ -237,14 +247,14 @@
       }
     });
 
-    // Slideshow
-    const slides = document.querySelectorAll('.banner img');
+    // Hero slideshow
+    const slides = document.querySelectorAll(".hero img");
     let index = 0;
     setInterval(() => {
-      slides[index].classList.remove('active');
+      slides[index].classList.remove("active");
       index = (index + 1) % slides.length;
-      slides[index].classList.add('active');
-    }, 10000);
+      slides[index].classList.add("active");
+    }, 8000);
   </script>
 
 </body>
