--- a/index.html
+++ b/index.html
@@ -71,23 +71,15 @@
 
     .hero {
       position: relative;
-      height: 100vh;
       width: 100%;
+      height: 100vh;
       overflow: hidden;
     }
 
     .hero img {
-      position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 0;
-      transition: opacity 1.2s ease-in-out;
-    }
-
-    .hero img.active {
-      opacity: 1;
-      z-index: 1;
     }
 
     .overlay {
@@ -103,7 +95,6 @@
       box-shadow: 0 20px 60px var(--shadow);
       z-index: 2;
       max-width: 600px;
-      transition: transform 0.3s ease;
     }
 
     .profile-card {
@@ -199,16 +190,13 @@
     <div class="dropdown" id="dropdownMenu">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
+      <a href="projects.html">Projects</a>
       <a href="cv.html">CV</a>
     </div>
   </header>
 
   <section class="hero">
-    <img src="Exploded Organiser.32.jpg" class="active" alt="Slide 1" />
-    <img src="untitled.31.jpg" alt="Slide 2" />
-    <img src="untitled.34.jpg" alt="Slide 3" />
-    <img src="untitled.36.jpg" alt="Slide 4" />
-
+    <img src="untitled.31.jpg" alt="Banner" />
     <div class="overlay">
       <div class="profile-card">
         <img src="profile.jpg" alt="Jack Simm" />
@@ -246,15 +234,6 @@
         menu.style.display = "none";
       }
     });
-
-    // Hero slideshow
-    const slides = document.querySelectorAll(".hero img");
-    let index = 0;
-    setInterval(() => {
-      slides[index].classList.remove("active");
-      index = (index + 1) % slides.length;
-      slides[index].classList.add("active");
-    }, 8000);
   </script>
 
 </body>
