--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   </header>
 
   <section class="hero">
-    <img src="untitled.31.jpg" alt="Banner" />
+    <img src="g.bip.25.JPG" alt="Banner" />
     <div class="overlay">
       <div class="profile-card">
         <img src="profile.jpg" alt="Jack Simm" />
