--- a/gallery.html
+++ b/gallery.html
@@ -4,38 +4,103 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery – Jack Simm</title>
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --text: #1d1d1f;
+      --light-text: #6e6e73;
+      --white: #fff;
+      --shadow: rgba(0, 0, 0, 0.06);
+    }
+
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'SF Pro Display', sans-serif;
+      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       margin: 0;
-      background: #fafafa;
-      color: #111;
+      background: #f9f9f9;
+      color: var(--text);
     }
 
     header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 20px 60px;
       background: white;
       box-shadow: 0 1px 4px rgba(0,0,0,0.05);
       position: sticky;
       top: 0;
+      z-index: 100;
     }
 
-    header h1 {
-      font-size: 1.4rem;
+    .logo {
+      font-size: 1.2rem;
+      font-weight: 600;
+      cursor: pointer;
+    }
+
+    .dropdown {
+      position: absolute;
+      top: 70px;
+      left: 60px;
+      background-color: white;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+      border-radius: 14px;
+      display: none;
+      flex-direction: column;
+      z-index: 99;
+    }
+
+    .dropdown a {
+      padding: 16px 24px;
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+      transition: background 0.2s;
+    }
+
+    .dropdown a:hover {
+      background: #f2f2f2;
+    }
+
+    .banner {
+      width: 100%;
+      max-height: 80vh;
+      object-fit: cover;
+      display: block;
+      border-bottom: 1px solid #eee;
     }
 
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 40px;
-      padding: 60px;
+      gap: 60px;
+      padding: 80px 60px;
     }
 
-    .grid img {
+    .card {
+      background: var(--white);
+      border-radius: 20px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
+      transform: translateY(20px);
+      opacity: 0;
+      transition: all 0.6s ease;
+    }
+
+    .card img {
       width: 100%;
-      border-radius: 16px;
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.08);
-      object-fit: cover;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover img {
+      transform: scale(1.02);
+    }
+
+    .card.show {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     footer {
@@ -44,23 +109,80 @@
       font-size: 0.9rem;
       color: #aaa;
     }
+
+    @media (max-width: 768px) {
+      header {
+        padding: 20px 24px;
+      }
+
+      .dropdown {
+        left: 20px;
+        width: calc(100% - 40px);
+      }
+
+      .grid {
+        padding: 40px 20px;
+        gap: 30px;
+      }
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Gallery – Jack Simm</h1>
+    <div class="logo" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
+      <a href="index.html">Home</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="projects.html">Projects</a>
+      <a href="cv.html">CV</a>
+    </div>
   </header>
 
+  <!-- Banner Image -->
+  <img src="g.bip.25.JPG" alt="Featured Product Banner" class="banner" />
+
+  <!-- Gallery Grid -->
   <section class="grid">
-    <img src="g.bip.25.JPG" alt="Design 1" />
-    <img src="untitled.31.jpg" alt="Design 2" />
-    <!-- Add more images as needed -->
+    <div class="card"><img src="g.bip.25.JPG" alt="Blue and Yellow Design" /></div>
+    <div class="card"><img src="untitled.31.jpg" alt="Exploded View Design" /></div>
+    <!-- Add more .card blocks for additional images -->
   </section>
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
   </footer>
+
+  <script>
+    const toggle = document.querySelector(".logo");
+    const menu = document.getElementById("dropdownMenu");
+
+    toggle.addEventListener("click", () => {
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    });
+
+    document.addEventListener("click", (e) => {
+      if (!menu.contains(e.target) && e.target !== toggle) {
+        menu.style.display = "none";
+      }
+    });
+
+    // Fade-in animation on scroll
+    const cards = document.querySelectorAll('.card');
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+        }
+      });
+    }, {
+      threshold: 0.1
+    });
+
+    cards.forEach(card => {
+      observer.observe(card);
+    });
+  </script>
 
 </body>
 </html>
